overflow bug on ios

--- a/assets/core.css
+++ b/assets/core.css
@@ -3839,7 +3839,6 @@ input::-webkit-search-decoration {
 
 .contact {
   position: relative;
-  overflow: hidden;
   max-width: 100%;
 }
 
