--- a/src/styles/components/forms/_postcard.scss
+++ b/src/styles/components/forms/_postcard.scss
@@ -9,7 +9,6 @@
 
 .contact {
     position: relative;
-    overflow: hidden;
     max-width: 100%;
 }
 
